MDEV-254: Server hang with FLUSH TABLES WITH READ LOCK AND DISABLE CHECKPOINT

The code to re-enable checkpointing after UNLOCK TABLES was lost in the 5.5
merge, so re-add it back in.